<resources>
    <string name="app_name">PoliCampus</string>
    <string name="title_section1">Time Table</string>
    <string name="title_section2">Notices</string>
    <string name="title_section3">Chat</string>
    <string name="title_section4">Job</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test_students">TestStudents</string>
    <string name="title_activity_main_students_test">MainStudentsTest</string>
    <string name="resume">Resume</string>
    <string name="refresh">Refresh</string>
    <string name="refreshing">Refreshing..</string>
    <string name="canceled">Canceled</string>
    <string name="finished">Finished</string>
    <string name="size">Size</string>
    <string name="key">Key</string>
    <string name="nothing_found_to_open_file">
        There\'s nothing that can open this type of file
    </string>
    <string name="files_to_be_uploaded">Files to be uploaded:</string>
    <string name="transfers">Transfers:</string>
    <string name="open">Open</string>
    <string name="upload_video">Upload A Video</string>
    <string name="upload_image">Upload An Image</string>
    <string name="create_bucket">Create bucket</string>
    <string name="delete_bucket">Delete bucket</string>
    <string name="download">Download</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_main_companies_test">MainCompaniesTest</string>
    <string name="title_activity_fake_activity_s3_test">FakeActivityS3Test</string>
    <string name="title_activity_edit_student_profile">Student profile</string>
    <string name="title_activity_edit_company_profile">Company profile</string>
    <string name="title_activity_show_student_profile">Student profile</string>
    <string name="title_activity_show_company_profile">Company profile</string>
    <string name="title_activity_student_profile">Student profile</string>
    <string name="title_activity_login">Log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="network_error">An error occurred while trying to connect to the remote server. Please, check your Internet connection then try again.</string>
    <string name="register">Register</string>
    <string name="register_label">Or, if you have not yet an account</string>
    <string name="choose">Choose</string>
    <string name="company">Company</string>
    <string name="student">Student</string>
    <string name="title_activity_main_student">MainStudentActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_info_wrapper">InfoWrapperActivity</string>
    <string name="search_button">Search</string>
    <string name="offers">Offers</string>
    <string name="cv">CV</string>
    <string name="links">Links</string>
    <string name="hobbies">Hobbies</string>
    <string name="email">Email</string>
    <string name="competences">Competences</string>
    <string name="availability">Only available</string>
    <string name="university_career">University Career</string>
    <string name="open_cv">Open CV</string>
    <string name="available_for_jobs">Job seeking</string>
    <string name="not_available_for_jobs">Not seeking jobs</string>
    <string name="title_activity_companies_favourites">Favourite Companies</string>
    <string name="location">Location</string>
    <string name="fieldOfInterest">Field of interest</string>
    <string name="search">Search</string>
    <string name="activity_search_companies">Search companies</string>
    <string name="studentKeyword">Competence</string>
    <string name="gender">Gender</string>
    <string name="students">Students</string>
    <string name="title_activity_students_favourites">Students</string>
    <string name="activity_search_students">Search students</string>
    <string name="add">Add</string>
    <string name="title_activity_offers_proposed">Offers proposed</string>
    <string name="add_new_job_offer">Add new job offer</string>
    <string name="title_activity_job_offer_creation">New job offer creation</string>
    <string name="job_offer_description">Job offer description</string>
    <string name="kind_of_contract">Kind of contract</string>
    <string name="number_of_months">Number of months</string>
    <string name="create_job_offer">Create job offer</string>
    <string name="job_offer_failed">Insertion of a new job offer failed. Please, check you have filled all the field in the form.</string>
    <string name="edit_profile">Edit profile</string>
    <string name="update_profile">Update profile</string>
    <string name="cancel">Cancel</string>
    <string name="upload_cv">Upload CV</string>
    <string name="fullname">Full name</string>
    <string name="tap_to_change">Tap to change</string>
    <string name="available">Available</string>
    <string name="not_available">Not available</string>
    <string name="surname">Surname</string>
    <string name="job_offer_code">Job offer code</string>
    <string-array name="sex_array">
        <item></item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_offer_show">Job offer</string>
    <string name="edit_offer">Edit the offer</string>
    <string name="apply">Apply</string>
    <string name="add_to_favourite">Add to favourites</string>
    <string name="discard_apply">Discard apply</string>
    <string name="fav">Fav</string>
    <string name="unfav">Unfav</string>
    <string name="number_of_workers">Number of workers</string>
    <string name="mission">Mission</string>
    <string name="clients">Clients</string>
    <string name="description">Description</string>
    <string name="error_login_failed">Login failed. Please check your e-mail and password or register yourself if you have not yet done.</string>
    <string name="error_server_side">Unexpected server error</string>
    <string name="error_network">Network error: please check your internet connection and try again</string>
    <string name="unfav_offer">Unfav</string>
    <string name="save">Save edits</string>
    <string name="title_activity_offer_edit_activity">Edit offer</string>
    <string name="name">Name</string>
    <string name="title_activity_offers_lists">OffersListsActivity</string>
    <string name="button_show_favourite">Show Favourites</string>
    <string name="button_show_candidatures">Show Candidatures</string>
    <string name="show_all_candidates">Show all candidates</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="action_logout">Logout</string>
    <string name="confirm">Confirm</string>
    <string name="logout_message">Do you want to confirm logout?</string>
    <string name="delete_user_message">Do you want to delete your account?</string>
    <string name="applied">Applied</string>
    <string name="companies">Companies</string>
    <string name="related_offers">Related Offers</string>
    <string name="appName">Poli Job</string>
    <string name="title_activity_search_offer">Search offers</string>
    <string name="delete_offer">delete offer</string>
    <string name="delete_offer_message">Do you want to delete this offer forever?</string>
    <string name="select_photo">Select a photo</string>
    <string name="select_pdf">Select a pdf</string>
    <string name="error_loading_photo">Error loading photo</string>
    <string name="error_loading_cv">Error loading cv</string>
    <string name="download_error">The image download has failed. Please, check your connection.</string>
    <string name="favourite_company_empty">No favourite company yet, use the search icon</string>
    <string name="error_invalid_company">Invalid CompanyID</string>
    <string name="error_empty_search">No results for this filters</string>
    <string name="error_empty_offer_proposed">No offer to display, add a new one</string>
    <string name="error_empty_offer">No applied offer yet, use the search icon</string>
    <string name="error_empty_offer_favourites">No favourite offer yet, use the search icon</string>
    <string name="no_fav_offers_yet">No favourite offer yet, use the search icon</string>
    <string name="filter">Filter</string>
    <string name="favourite_students_empty">No favourite student yet, use the search icon</string>
    <string name="no_application_yet">No candidature yet, use the search icon</string>
    <string name="open_file">Open file</string>
    <string name="job_title">Title</string>
    <string name="title_activity_main2_student">Main2StudentActivity</string>
    <string name="minimum_mark">Minimum graduation mark</string>
    <string name="age">Age</string>
    <string name="career_title">Title:</string>
    <string name="career_mark">Final grade:</string>
    <string name="career_graduation_date">Graduation date:</string>
    <string name="university_careers">University careers</string>
    <string name="birth_date">Birth date</string>
    <string name="laude">Laude</string>
    <string name="student_update_failed">The update of the student has failed. Please, check you have filled properly all the necessary fields.</string>
    <string name="rent_offers">Rent offers</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="your_offers">Your offers</string>
    <string name="title_notice_list">Notices</string>
    <string name="title_notice_detail">Notice Detail</string>
    <string name="load_more">Load More</string>
    <string name="action_show_as_map">Show as map</string>
    <string name="action_show_as_list">Show as list</string>
    <string name="add_new_notice">Add a new notice</string>
    <string name="radius">Radius</string>
    <string name="price">Price</string>
    <string name="tags">Tags</string>
    <string name="edit_notice">Edit notice</string>
    <string name="upload_pictures">Upload pictures</string>
    <string name="open_gallery">Open the gallery</string>
    <string name="phone_number">Phone number</string>
    <string name="inappropriate_count">Inappropriate count</string>
    <string name="creation_date">Creation date</string>
    <string name="title">Title</string>
    <string name="delete_notice">Delete notice</string>
    <string name="remove_from_bookmarks">Remove from bookmarks</string>
    <string name="add_to_bookmarks">Add to bookmarks</string>
    <string name="create_notice">Create notice</string>
    <string name="field_required">You must fill all the required fields</string>
    <string name="show_notice">Notice details</string>
    <string name="price_with_unit">Price (€)</string>
    <string name="size_with_unit">Size (mq)</string>
    <string name="notice_board">Notice Board</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token</string>
    <string name="seeFull">See full schedule</string>
    <string name="course">Course...</string>
    <string name="teacher">Professor...</string>
    <string name="searchByCourse">Search by course</string>
    <string name="searchByTeacher">Search by professor</string>
</resources>