

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="it.polito.mobile.androidassignment2.CompanyFlow.JobOfferCreation">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <LinearLayout
            style="@style/ProfileItem" >

            <AutoCompleteTextView
                style="@style/ProfileItemText"
                android:id="@+id/location"
                android:hint="@string/location"/>
        </LinearLayout>

        <View android:background="@color/medium_gray" android:layout_width="match_parent" android:layout_height="1dp"/>

        <LinearLayout
            style="@style/ProfileItem" >

            <EditText
                style="@style/ProfileItemText"
                android:id="@+id/job_offer_code"
                android:hint="@string/job_offer_code"/>
        </LinearLayout>

        <View android:background="@color/medium_gray" android:layout_width="match_parent" android:layout_height="1dp"/>

        <LinearLayout
            style="@style/ProfileItem" >

            <EditText
                style="@style/ProfileItemText"
                android:id="@+id/job_offer_description"
                android:hint="@string/job_offer_description"/>
        </LinearLayout>

        <View android:background="@color/medium_gray" android:layout_width="match_parent" android:layout_height="1dp"/>

        <LinearLayout
            style="@style/ProfileItem" >

            <EditText
                style="@style/ProfileItemText"
                android:id="@+id/kind_of_contract"
                android:hint="@string/kind_of_contract"/>
        </LinearLayout>

        <View android:background="@color/medium_gray" android:layout_width="match_parent" android:layout_height="1dp"/>

        <LinearLayout
            style="@style/ProfileItem" >

            <EditText
                style="@style/ProfileItemText"
                android:id="@+id/number_of_months"
                android:inputType="number"
                android:hint="@string/number_of_months"/>
        </LinearLayout>

        <View android:background="@color/medium_gray" android:layout_width="match_parent" android:layout_height="1dp"/>


        <LinearLayout
            style="@style/ProfileItem" >

            <it.polito.mobile.androidassignment2.CompetencesCompletionTextView
                style="@style/ProfileItemText"
                android:id="@+id/competences"
                android:hint="@string/competences"/>
        </LinearLayout>


        <Button
            android:id="@+id/add_job_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/app_default_background"
            android:textColor="@color/white"
            android:text="@string/create_job_offer"
            />
    </LinearLayout>




</ScrollView>