<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60px"
            android:text="@string/searchByCourse"
            android:textColor="@color/black"
            style="@style/ProfileItemText"/>


        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:imeOptions="actionNext"
            android:imeActionId="@+id/button"
            android:hint="@string/course"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"/>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/searchByTeacher"
            android:textColor="@color/black"
            style="@style/ProfileItemText"/>

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:completionThreshold="1"
            android:hint="@string/teacher"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/blue_sky"
            android:padding="16dp"
            android:shadowColor="@color/strong_blue"
            android:text="@string/seeFull"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>

