<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_header"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/edit_c_logo_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:layout_centerInParent="true"
            />
            <ProgressBar
                android:id="@+id/edit_c_logo_pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible"
                style="@android:style/Widget.ProgressBar.Small"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tap_to_change"
                android:textSize="30sp"
                android:textColor="#fff"
                />
        </RelativeLayout>

        <LinearLayout
            style="@style/ProfileItem" >
            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/name" />
            <EditText
                android:id="@+id/edit_c_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ProfileItemText"
                />
        </LinearLayout>

        <View android:background="@color/medium_gray" android:layout_width="match_parent" android:layout_height="1dp"/>

        <LinearLayout
            style="@style/ProfileItem" >
            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/location" />
            <EditText
                android:id="@+id/edit_c_location_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ProfileItemText"
                />
        </LinearLayout>

        <View android:background="@color/medium_gray" android:layout_width="match_parent" android:layout_height="1dp"/>

        <LinearLayout
            style="@style/ProfileItem" >
            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/number_of_workers" />
            <EditText
                android:id="@+id/edit_c_number_of_workers_et"
                android:textColorLink="@color/blue_sky"
                style="@style/ProfileItemText" />
        </LinearLayout>

        <View android:background="@color/medium_gray" android:layout_width="match_parent" android:layout_height="1dp"/>

        <LinearLayout
            style="@style/ProfileItem" >
            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/mission" />
            <EditText
                android:id="@+id/edit_c_mission_et"
                style="@style/ProfileItemText" />
        </LinearLayout>

        <View android:background="@color/medium_gray" android:layout_width="match_parent" android:layout_height="1dp"/>

        <LinearLayout
            style="@style/ProfileItem" >
            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/description" />
            <EditText
                android:id="@+id/edit_c_description_et"
                style="@style/ProfileItemText" />
        </LinearLayout>

        <View android:background="@color/medium_gray" android:layout_width="match_parent" android:layout_height="1dp"/>

        <LinearLayout
            style="@style/ProfileItem" >
            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/competences" />
            <it.polito.mobile.androidassignment2.CompetencesCompletionTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_c_competences_ac"
                android:layout_marginTop="2dp"
                android:inputType="text"

                android:imeOptions="actionDone"
                style="@style/ProfileItemText"/>
        </LinearLayout>
        <View android:background="@color/medium_gray" android:layout_width="match_parent" android:layout_height="1dp"/>

        <LinearLayout
            style="@style/ProfileItem" >
            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/clients" />
            <it.polito.mobile.androidassignment2.ClientsCompletionTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_c_clients_ac"
                android:layout_marginTop="2dp"
                android:inputType="text"

                android:imeOptions="actionDone"
                style="@style/ProfileItemText"/>
        </LinearLayout>

        <View android:background="@color/medium_gray" android:layout_width="match_parent" android:layout_height="1dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/side_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/side_margin"
            >
            <Button
                android:id="@+id/edit_c_update_profile_b"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/blue_sky"
                android:text="@string/update_profile"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#fff"
                />
            <ProgressBar
                android:id="@+id/edit_c_update_pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible"
                style="@android:style/Widget.ProgressBar.Small"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/edit_c_cancel_update_profile_b"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:background="@color/blue_sky"
            android:text="@string/cancel"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#fff"
            />

    </LinearLayout>
</ScrollView>