
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="it.polito.s211371.mad2.LoginActivity"
                android:background="@color/cleargray">

<!-- Login progress -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:id="@+id/logo_image"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_name"
            android:layout_weight="1"/>

        <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_weight="1"
        android:layout_gravity="center"/>
    </LinearLayout>

    <ScrollView
    android:id="@+id/login_form"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        >

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:paddingTop="5dp"
            style="@style/ProfileItemText"
            android:imeActionId="@+id/password"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/email_sign_in_button"
            android:imeActionLabel="@string/action_sign_in_short"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textPassword"
            style="@style/ProfileItemText"/>

        <Button
            android:id="@+id/email_sign_in_button"
            android:background="@color/blue_sky"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"

            android:text="@string/action_sign_in"
            android:textStyle="bold"
            android:shadowColor="@color/strong_blue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_label"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/register"
            android:background="@color/blue_sky"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:shadowColor="@color/strong_blue"/>

    </LinearLayout>
</ScrollView>


</LinearLayout>