<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="it.polito.mobile.androidassignment2.CompanyFlow.OfferShowActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_header" >
            <ProgressBar
                android:id="@+id/photo_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                style="@android:style/Widget.ProgressBar.Small"
                />
            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:layout_centerInParent="true"
                />
            <TextView
                android:id="@+id/offer_company_fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="30sp"
                android:textColor="@color/white"
                />
        </RelativeLayout>

        <LinearLayout
            style="@style/ProfileItem" >
            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/location" />
            <EditText
                style="@style/ProfileItemText"
                android:id="@+id/location"
                />
        </LinearLayout>

        <View android:background="@color/medium_gray" android:layout_width="match_parent" android:layout_height="1dp"/>

        <LinearLayout
            style="@style/ProfileItem" >
            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/job_offer_code" />
            <EditText
                style="@style/ProfileItemText"
                android:id="@+id/job_offer_code"
                />
        </LinearLayout>

        <View android:background="@color/medium_gray" android:layout_width="match_parent" android:layout_height="1dp"/>

        <LinearLayout
            style="@style/ProfileItem" >
            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/job_offer_description" />
            <EditText
                style="@style/ProfileItemText"
                android:id="@+id/job_offer_description"
                />
        </LinearLayout>

        <View android:background="@color/medium_gray" android:layout_width="match_parent" android:layout_height="1dp"/>

        <LinearLayout
            style="@style/ProfileItem" >
            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/kind_of_contract" />
            <EditText
                style="@style/ProfileItemText"
                android:id="@+id/kind_of_contract"
                />
        </LinearLayout>

        <View android:background="@color/medium_gray" android:layout_width="match_parent" android:layout_height="1dp"/>

        <LinearLayout
            style="@style/ProfileItem" >
            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/number_of_months" />
            <EditText
                style="@style/ProfileItemText"
                android:id="@+id/number_of_months"
                android:inputType="number"
                />
        </LinearLayout>

        <View android:background="@color/medium_gray" android:layout_width="match_parent" android:layout_height="1dp"/>


        <LinearLayout
            style="@style/ProfileItem" >
            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/competences" />
            <it.polito.mobile.androidassignment2.CompetencesCompletionTextView
                style="@style/ProfileItemText"
                android:id="@+id/competences"
                />
        </LinearLayout>

        <Button
            android:id="@+id/edit_offer_save"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:background="@color/app_default_background"
            android:text="@string/save"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/white"
            />

    </LinearLayout>
</ScrollView>
